# toolchains_protoc

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel
.aspect/workflows/: config.yaml
.bcr/: config.yml  metadata.template.json
.github/workflows/: BUILD.bazel  ci.yaml  mirror_protoc_release.yml  release.yml  release_prep.sh
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  proto_descriptor_test.sh  test.sh
examples/: .bazelrc  19679.patch  BUILD  BUILD.bazel  MODULE.bazel  foo.proto  localhost+2-key.pem  localhost+2.pem  package.json  pnpm-lock.yaml  tsconfig.json
examples/cc/: BUILD.bazel  greeter_example.cc
examples/go/: BUILD  foo_proto_test.go  greeter_proto_test.go
examples/java/: BUILD  Main.java
examples/lang_toolchains/: BUILD  requirements.in  requirements.txt
examples/proto/: BUILD.bazel  greeter.pb.go  greeter.proto  greeter_pb.d.ts
examples/python/: BUILD  message_test.py  python_grpc_compile.bzl  python_grpc_library.bzl
examples/python/client/: BUILD.bazel  __main__.py
examples/python/server/: BUILD.bazel  __main__.py
examples/rust/: BUILD.bazel
examples/rust/client/: BUILD.bazel
examples/rust/client/src/: main.rs
examples/rust/server/: BUILD.bazel
examples/rust/server/src/: main.rs  server.rs
examples/tools/: BUILD.bazel  go_proto_library.bzl  requirements.in  requirements.txt
examples/tools/grpcio_tools/: BUILD.bazel  __main__.py
examples/tools/toolchains/: BUILD.bazel
examples/typescript/client/: BUILD.bazel  main.mts
examples/typescript/server/: BUILD.bazel  connect.mts  main.mts
protoc/: BUILD.bazel  extensions.bzl  flags.bzl  repositories.bzl  toolchain.bzl
protoc/private/: BUILD.bazel  mirror_protoc_release.sh  prebuilt_protoc_toolchain.bzl  prebuilt_protoc_toolchain_test.bzl  protoc_toolchains.bzl  resolved_toolchain.bzl  versions.bzl
tests/: BUILD.bazel
tools/: BUILD.bazel
tools/toolchains/: BUILD.bazel  defs.bzl
v2/: .bazelrc  BUILD.bazel  MODULE.bazel  cc_proto_library.bzl
v2/version/: BUILD.bazel
v2/version/protoc/: BUILD.bazel
v2/version/runtime/: BUILD.bazel
