# Override http_archive for local testing
local_repository(
    name = "toolchains_protoc",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# toolchains_protoc setup #
######################
# Fetches the toolchains_protoc dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@toolchains_protoc//protoc:repositories.bzl", "rules_protoc_dependencies")

rules_protoc_dependencies()

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies")

rules_proto_dependencies()

load("@rules_proto//proto:setup.bzl", "rules_proto_setup")

rules_proto_setup()

load("@bazel_features//:deps.bzl", "bazel_features_deps")

bazel_features_deps()

load("@toolchains_protoc//protoc:toolchain.bzl", "protoc_toolchains")

protoc_toolchains(
    name = "protoc_toolchains",
    version = "v25.3",
)

# com_google_protobuf leaks a java dependency:
# /home/runner/.bazel/external/com_google_protobuf/bazel/java_proto_library.bzl:9:6:
# at /home/runner/.bazel/external/com_google_protobuf/bazel/private/bazel_java_proto_library_rule.bzl:9:6:
# at /home/runner/.bazel/external/rules_java/java/common/java_info.bzl:16:6:
# Unable to find package for @@compatibility_proxy//:proxy.bzl
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_java",
    sha256 = "5449ed36d61269579dd9f4b0e532cd131840f285b389b3795ae8b4d717387dd8",
    urls = [
        "https://github.com/bazelbuild/rules_java/releases/download/8.7.0/rules_java-8.7.0.tar.gz",
    ],
)

load("@rules_java//java:rules_java_deps.bzl", "rules_java_dependencies")

rules_java_dependencies()
