load("@rules_rust//rust:defs.bzl", "rust_library_group")

package(default_visibility = ["//tools/toolchains:__pkg__"])

rust_library_group(
    name = "prost_runtime",
    deps = [
        "@crates//:prost",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    deps = [
        ":prost_runtime",
        "@crates//:tonic",
    ],
)
