load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//protoc:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//protoc:__subpackages__"],
)
