load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "main",
    srcs = ["main.mts"],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@connectrpc/connect",
        "//:node_modules/@connectrpc/connect-node",
        "//:node_modules/@types/node",
        "//:package_json",
        "//proto:greeter_ts_proto",
    ],
)

js_binary(
    name = "client",
    data = [
        "//:package_json",
        "//proto:greeter_ts_proto",
    ],
    entry_point = "main.mjs",
)
