load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "main",
    srcs = [
        "connect.mts",
        "main.mts",
    ],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@connectrpc/connect",
        "//:node_modules/@connectrpc/connect-fastify",
        "//:node_modules/@types/node",
        "//:node_modules/fastify",
        "//:package_json",
        "//proto:greeter_ts_proto",
    ],
)

js_binary(
    name = "server",
    data = [":main"],
    entry_point = "main.mjs",
)
